# benchmark

./: .clang-format  .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  configure
aio/: CMakeLists.txt  echo_client.cpp
aio/boost/: CMakeLists.txt  boost_coro_echo_server.cpp  boost_echo_server.cpp  boost_relay_server.cpp
aio/solid/: CMakeLists.txt  solid_echo_server.cpp  solid_relay_server.cpp
cmake/: build_cereal.cmake  build_cxxopts.cmake  build_gbench.cmake  build_snappy.cmake  find_boost.cmake  find_openssl.cmake  source-format.cmake
function/: CMakeLists.txt  README.md  bench_function.cpp  gbench_function.cpp
mpipc/: CMakeLists.txt
mpipc/grpc/: CMakeLists.txt  bench_client.cpp  bench_server.cpp  bench_server_engine.cpp  bench_server_main.cpp
mpipc/solid/: CMakeLists.txt  bench_client_engine.cpp  bench_client_engine.hpp  bench_client_main.cpp  bench_protocol.hpp  bench_server_engine.cpp  bench_server_engine.hpp  bench_server_main.cpp  bench_test_main.cpp  test_text.txt
mprpc/: CMakeLists.txt  test_text.txt  text_generator.cpp
mprpc/capnp/: CMakeLists.txt  bench.capnp  bench_client_engine.cpp  bench_client_engine.hpp  bench_server_engine.cpp  bench_server_engine.hpp  bench_test_main.cpp
mprpc/grpc/: CMakeLists.txt  README.md  bench.proto  bench_client_engine.cpp  bench_client_engine.hpp  bench_client_main.cpp  bench_server_engine.cpp  bench_server_engine.hpp  bench_server_main.cpp  bench_test_main.cpp
mprpc/solid/: CMakeLists.txt  bench_client_engine.cpp  bench_client_engine.hpp  bench_client_main.cpp  bench_protocol.hpp  bench_server_engine.cpp  bench_server_engine.hpp  bench_server_main.cpp  bench_test_main.cpp
prerequisites/: build.sh  prepare_extern.sh
serialization/: CMakeLists.txt  data.hpp  main.cpp
serialization/boost/: record.cpp  record.hpp
serialization/cereal/: record.cpp  record.hpp
serialization/solid_v1/: record.hpp
serialization/solid_v2/: record.cpp  record.hpp
serialization/solid_v3/: record.cpp  record.hpp
threadpool/: CMakeLists.txt
threadpool/erez_strauss_mpmcq/: CMakeLists.txt  bench_threadpool_es.cpp
threadpool/rigtorp/: CMakeLists.txt  bench_threadpool_rt.cpp
threadpool/solid/: CMakeLists.txt  bench_threadpool.cpp
